@@ -1,3 +1,10 @@
+Sat May  8 15:35:17 BST 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/filenames.c (filename_info): Allow section and extension to
+	  differ as long as the first character is the same.  (This is my
+	  understanding of what the code was originally meant to do, but it
+	  only worked if the section was exactly one character long.)
+
 Tue Apr 27 11:02:48 BST 2010  Colin Watson  <cjwatson@debian.org>
 
 	Upgrade to Gnulib 20100424.
